--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -1,147 +1,111 @@
-;==========================================================
-;
-;
-;   ██████╗  ██████╗ ██╗  ██╗   ██╗██████╗  █████╗ ██████╗
-;   ██╔══██╗██╔═══██╗██║  ╚██╗ ██╔╝██╔══██╗██╔══██╗██╔══██╗
-;   ██████╔╝██║   ██║██║   ╚████╔╝ ██████╔╝███████║██████╔╝
-;   ██╔═══╝ ██║   ██║██║    ╚██╔╝  ██╔══██╗██╔══██║██╔══██╗
-;   ██║     ╚██████╔╝███████╗██║   ██████╔╝██║  ██║██║  ██║
-;   ╚═╝      ╚═════╝ ╚══════╝╚═╝   ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝
-;
-;
-;   To learn more about how to configure Polybar
-;   go to https://github.com/polybar/polybar
-;
-;   The README contains a lot of information
-;
-;==========================================================
+; SEE: https://github.com/polybar/polybar/wiki/
 
-[colors]
-background = #282A2E
-background-alt = #373B41
-foreground = #C5C8C6
-primary = #F0C674
-secondary = #8ABEB7
-alert = #A54242
-disabled = #707880
+[global/wm]
+include-file = $HOME/.config/polybar/colors.ini
 
 [bar/main]
-width = 100%
-height = 24pt
-radius = 6
+bottom = false
+fixed-center = true
 
-; dpi = 96
-
-background = ${colors.background}
-foreground = ${colors.foreground}
-
-line-size = 3pt
-
-border-size = 4pt
+border-size = 0
 border-color = #00000000
 
-padding-left = 0
-padding-right = 1
+padding-right = 16px
+padding-left = 16px
 
-module-margin = 1
-
+module-margin = 12px
 separator = |
-separator-foreground = ${colors.disabled}
+separator-foreground = ${colors.disabled-color}
 
-font-0 = monospace;2
+width = 100%
+height = 40px
 
-modules-left = xworkspaces xwindow
-modules-right = filesystem pulseaudio xkeyboard memory cpu wlan eth date
+font-0 = JetBrainsMono Nerd Font:size=12;3
 
-cursor-click = pointer
-cursor-scroll = ns-resize
+background = ${colors.background}
+foreground = %{colors.foreground}
 
-enable-ipc = true
+wm-restack = bspwm
 
-; wm-restack = generic
-; wm-restack = bspwm
-; wm-restack = i3
+modules-left = date
+modules-center = xworkspaces
+modules-right = xkeyboard pulseaudio wlan vpn powermenu tray
 
-; override-redirect = true
-
-[module/systray]
+[module/tray]
 type = internal/tray
 
-format-margin = 8pt
-tray-spacing = 16pt
+format-margin = 8px
+
+tray-size = 16px
+tray-spacing = 16px
 
 [module/xworkspaces]
 type = internal/xworkspaces
 
+icon-default =
+
+format = <label-state> 
+
+; Текущее пространство
 label-active = %name%
-label-active-background = ${colors.background-alt}
-label-active-underline= ${colors.primary}
-label-active-padding = 1
+label-active-foreground = ${colors.foreground}
+label-active-padding = 16px
 
+; Пространства с хотя бы одним окном
 label-occupied = %name%
-label-occupied-padding = 1
+label-occupied-foreground = ${colors.foreground-secondary}
+label-occupied-padding = 16px
 
-label-urgent = %name%
-label-urgent-background = ${colors.alert}
-label-urgent-padding = 1
+; Пространства с окнами, которые требуют внимания (alert)
+label-urgent = %nwin%
+label-urgent-foreground = ${colors.alert-dark-color}
+label-urgent-padding = 16px
 
+; Пространства без окон
 label-empty = %name%
-label-empty-foreground = ${colors.disabled}
-label-empty-padding = 1
+label-empty-foreground = ${colors.disabled-color}
+label-empty-padding = 16px
 
 [module/xwindow]
 type = internal/xwindow
-label = %title:0:60:...%
-
-[module/filesystem]
-type = internal/fs
-interval = 25
-
-mount-0 = /
-
-label-mounted = %{F#F0C674}%mountpoint%%{F-} %percentage_used%%
-
-label-unmounted = %mountpoint% not mounted
-label-unmounted-foreground = ${colors.disabled}
+label = %instance%
 
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume-prefix = "VOL "
-format-volume-prefix-foreground = ${colors.primary}
-format-volume = <label-volume>
+internal = 5
+
+use-ui-max = false
+
+format-volume = <ramp-volume>  <label-volume>
 
 label-volume = %percentage%%
+label-volume-foreground = ${colors.foreground-secondary}
 
-label-muted = muted
-label-muted-foreground = ${colors.disabled}
+label-muted = 󰖁
+
+ramp-volume-0 = 󰕿
+ramp-volume-1 = 󰖀
+ramp-volume-2 = 󰕾
 
 [module/xkeyboard]
 type = internal/xkeyboard
+
 blacklist-0 = num lock
+blacklist-1 = scroll lock
 
-label-layout = %layout%
-label-layout-foreground = ${colors.primary}
+format = <label-indicator> <label-layout> 
 
-label-indicator-padding = 2
-label-indicator-margin = 1
-label-indicator-foreground = ${colors.background}
-label-indicator-background = ${colors.secondary}
+label-indicator-on = %name%
 
-[module/memory]
-type = internal/memory
-interval = 2
-format-prefix = "RAM "
-format-prefix-foreground = ${colors.primary}
-label = %percentage_used:2%%
+layout-icon-default = some-icon
+layout-icon-0 = ru
+layout-icon-1 = us
 
-[module/cpu]
-type = internal/cpu
-interval = 2
-format-prefix = "CPU "
-format-prefix-foreground = ${colors.primary}
-label = %percentage:2%%
+label-indicator-on-capslock = 󰬶
+label-indicator-off-capslock =
 
+; TODO
 [network-base]
 type = internal/network
 interval = 5
@@ -152,25 +116,47 @@ label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
 [module/wlan]
 inherit = network-base
 interface-type = wireless
-label-connected = %{F#F0C674}%ifname%%{F-} %essid% %local_ip%
 
-[module/eth]
-inherit = network-base
-interface-type = wired
-label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
+interval = 3.0
+
+format-connected = %{A1:wifimenu:}󰖩  <label-connected>%{A}
+format-disconnected = %{A1:wifimenu:}󰖪%{A}
+
+label-connected = %essid%
+label-connected-foreground = ${colors.foreground-secondary}
 
 [module/date]
 type = internal/date
 interval = 1
 
-date = %H:%M
-date-alt = %Y-%m-%d %H:%M:%S
+format =   <label>
+format-radius = 8px
+format-padding = 8px
 
-label = %date%
-label-foreground = ${colors.primary}
+label = %date% %time%
+label-foreground = ${colors.foreground-secondary}
 
-[settings]
-screenchange-reload = true
-pseudo-transparency = true
+time = %H:%M:%S
+time-alt = %H:%M:%S
 
-; vim:ft=dosini
+date = %a, %b %y
+date-alt = %d.%m.%Y
+
+[module/powermenu]
+type = custom/text
+
+format = <label>
+format-padding = 1
+
+label = 󰤆
+
+click-left = powermenu &
+
+[module/vpn]
+type = custom/text
+
+format = <label>
+
+label = VPN
+
+click-left = rofi-openvpn
