Add rofi-bluetooth script

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -139,7 +139,7 @@ label-foreground = ${colors.foreground-secondary}
 time = %H:%M:%S
 time-alt = %H:%M:%S
 
-date = %a, %b %y
+date = %a, %b %d
 date-alt = %d.%m.%Y
 
 [module/powermenu]
@@ -154,9 +154,12 @@ click-left = powermenu &
 
 [module/vpn]
 type = custom/text
-
 format = <label>
-
 label = VPN
+click-left = rofi-openvpn &
 
-click-left = rofi-openvpn
+[module/bluetooth]
+type = custom/script
+exec = rofi-bluetooth --status
+interval = 1
+click-left = rofi-bluetooth &
