Fix polybar errors

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -23,13 +23,13 @@ height = 40px
 font-0 = JetBrainsMono Nerd Font:size=12;3
 
 background = ${colors.background}
-foreground = %{colors.foreground}
+foreground = ${colors.foreground}
 
 wm-restack = bspwm
 
 modules-left = date
 modules-center = xworkspaces
-modules-right = xkeyboard pulseaudio wlan vpn powermenu tray
+modules-right = xkeyboard pulseaudio bluetooth wlan vpn powermenu tray
 
 [module/tray]
 type = internal/tray
