--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -8,22 +8,22 @@
 # unless explicitly requested using the wintypes option.
 #
 # shadow = false
-shadow = true;
+shadow = false;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
-shadow-radius = 7;
+shadow-radius = 0;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
 # shadow-opacity = .75
 
 # The left offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-x = -15
-shadow-offset-x = -7;
+shadow-offset-x = 0;
 
 # The top offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-y = -15
-shadow-offset-y = -7;
+shadow-offset-y = 0;
 
 # Red color value of shadow (0.0 - 1.0, defaults to 0).
 # shadow-red = 0
@@ -44,10 +44,6 @@ shadow-offset-y = -7;
 #
 # shadow-exclude = []
 shadow-exclude = [
-  "name = 'Notification'",
-  "class_g = 'Conky'",
-  "class_g ?= 'Notify-osd'",
-  "class_g = 'Cairo-clock'",
   "_GTK_FRAME_EXTENTS@:c"
 ];
 
@@ -120,7 +116,7 @@ active-opacity = 1.0
 
 # Specify a list of conditions of windows that should never be considered focused.
 # focus-exclude = []
-focus-exclude = [ "class_g = 'Cairo-clock'" ];
+focus-exclude = [];
 
 # Use fixed inactive dim value, instead of adjusting according to window opacity.
 # inactive-dim-fixed = 1.0
@@ -133,8 +129,7 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
 opacity-rule = [
-  "80:class_g = 'kitty' && focused",
-  "70:class_g = 'kitty' && !focused"
+  "85:class_g = 'kitty' && focused",
 ];
 
 
@@ -149,7 +144,6 @@ corner-radius = 16
 
 # Exclude conditions for rounded corners.
 rounded-corners-exclude = [
-  "window_type = 'dock'",
   "window_type = 'desktop'"
 ];
 
@@ -196,6 +190,10 @@ blur-kern = "3x3box";
 # Exclude conditions for background blur.
 # blur-background-exclude = []
 blur-background-exclude = [
+	"window_type = 'menu'",
+  "window_type = 'dropdown_menu'",
+  "window_type = 'popup_menu'",
+  "window_type = 'tooltip'",
   "window_type = 'desktop'",
   "_GTK_FRAME_EXTENTS@:c"
 ];
