--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -129,7 +129,7 @@ focus-exclude = [];
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
 opacity-rule = [
-  "85:class_g = 'kitty' && focused",
+  "85:class_g = 'kitty'",
 ];
 
 
