Add xkbswitch plugin and tmux option for him

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -3,12 +3,15 @@ set -g mouse on
 # Основной префикс
 set -g prefix C-a
 
+# Нужно для xkbswitch.nvim
+set -g focus-events on
+
 # Сортировка сессий по имени
 bind s choose-tree -sZ -O name
 
 # Изменение индексов (чтобы начаналось с 1, а не с 0)
 set -g base-index 1
-setw -g pane-base-index 1
+set -g pane-base-index 1
 
 # Не выходить из tmux при закрытии сеанса
 set -g detach-on-destroy off
