(tmux) move config file

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,7 +14,7 @@ set -g base-index 1
 set -g pane-base-index 1
 
 # Не выходить из tmux при закрытии сеанса
-set -g detach-on-destroy off
+# set -g detach-on-destroy off
 
 # Создать вертикальную панель в каталое текущей сессии
 unbind %
@@ -32,7 +32,7 @@ bind -n C-] next-window
 
 # Перезагрузить конфиг
 unbind r
-bind r source-file ~/.tmux.conf | "Reloaded!"
+bind r source-file ~/.tmux.conf
 
 # Переключение по панелям (Ctrl + клавиши Vim)
 bind h select-pane -L
@@ -55,6 +55,9 @@ set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi 'v' send -X begin-selection 
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi 'y' send -X copy-selection 
+
+# Отвяжем Escape с "previous window", иначе нереально пользоваться nvim в tmux
+unbind-key -T root Escape
 
 # Плагины
 set -g @plugin 'tmux-plugins/tpm'
