(picom) add new rules to blur-background-exclude

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -195,6 +195,11 @@ blur-background-exclude = [
   "window_type = 'popup_menu'",
   "window_type = 'tooltip'",
   "window_type = 'desktop'",
+	"class_g = 'Gromit-MPX'",
+	"class_g = 'gromit-mpx'",
+	"name = 'Gromit-MPX'",
+	"name = 'gromit-mpx'",
+	"override_redirect = true",
   "_GTK_FRAME_EXTENTS@:c"
 ];
 
