--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,6 +3,9 @@ set -g mouse on
 # Основной префикс
 set -g prefix C-a
 
+# Установим отображение панели сверху
+set-option -g status-position top
+
 # Нужно для xkbswitch.nvim
 set -g focus-events on
 
@@ -67,8 +70,26 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-sessionist'
 
-# Тема для tmux
-set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
+set -g @plugin 'catppuccin/tmux'
+
+set -g @catppuccin_window_left_separator ""
+set -g @catppuccin_window_right_separator " "
+set -g @catppuccin_window_middle_separator " █"
+set -g @catppuccin_window_number_position "right"
+
+set -g @catppuccin_window_default_fill "number"
+set -g @catppuccin_window_default_text "#W"
+
+set -g @catppuccin_window_current_fill "number"
+set -g @catppuccin_window_current_text "#W"
+
+set -g @catppuccin_status_modules_right "directory session"
+set -g @catppuccin_status_left_separator  " "
+set -g @catppuccin_status_right_separator ""
+set -g @catppuccin_status_fill "icon"
+set -g @catppuccin_status_connect_separator "no"
+
+set -g @catppuccin_directory_text "#{pane_current_path}"
 
 # Автоматическое восстановление сохраненных сессий
 set -g @resurrect-capture-pane-contents 'on'
