--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,3 +1,7 @@
-# Шрифт
+# Параметры нужны для работы Zen Mode
+allow_remote_control socket-only
+listen_on unix:/tmp/kitty
+
 font_family "JetBrainsMono Nerd Font"
 font_size 16
+background #191927
