--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,9 +17,12 @@ set -g base-index 1
 set -g pane-base-index 1
 
 # Не выходить из tmux при закрытии сеанса
-# set -g detach-on-destroy off
+set -g detach-on-destroy off
 
+# Нужно для Zen-Mode
+set-option -g allow-passthrough on
 # Создать вертикальную панель в каталое текущей сессии
+
 unbind %
 bind '\' split-window -h -c "#{pane_current_path}"
 
