(polybar) update bluetooth and openvpn libs

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -153,13 +153,13 @@ label = 󰤆
 click-left = powermenu &
 
 [module/vpn]
-type = custom/text
-format = <label>
-label = VPN
+type = custom/script
+exec = rofi-openvpn --status
+interval = 5
 click-left = rofi-openvpn &
 
 [module/bluetooth]
 type = custom/script
 exec = rofi-bluetooth --status
-interval = 1
+interval = 5
 click-left = rofi-bluetooth &
