--- a/hyprland-cli-tool/tsconfig.json
+++ b/hyprland-cli-tool/tsconfig.json
@@ -7,14 +7,13 @@
     "strict": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
-		"forceConsistentCasingInFileNames": true,
+    "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
     "strictNullChecks": true,
 
-		"baseUrl": "src",
+    "baseUrl": ".",
     "paths": {
-      "@commands/*": ["commands/*"],
-      "@utils/*": ["utils/*"]
+      "@*": ["./src/*"]
     }
   },
   "include": ["src"],
