add screenshot script & correct configs for hypr and waybar

--- a/.config/hypr/settings/autostart.conf
+++ b/.config/hypr/settings/autostart.conf
@@ -1,3 +1,5 @@
-exec-once = $bar
-exec-once = $wallpapers 
-exec-once = telegram-desktop -startintray
+exec-once = ~/.local/bin/waybar-launch.sh 
+exec-once = ~/.local/bin/swww-launch.sh
+exec-once = [workspace 1 silent] google-chrome-stable 
+exec-once = [workspace 2 silent] telegram-desktop
+exec-once = [workspace 3 silent] $terminal 
