--- a/.config/hypr/settings/keybindings.conf
+++ b/.config/hypr/settings/keybindings.conf
@@ -20,6 +20,10 @@ bind = $mainMod, H, movefocus, r
 bind = $mainMod, K, movefocus, u
 bind = $mainMod, J, movefocus, d
 
+# Скриншоты
+bind = , Print, exec, ~/.local/bin/screenshot.sh screen
+bind = $mainMod, Print, exec, ~/.local/bin/screenshot.sh area 
+
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
