--- a/.config/hypr/settings/keywords.conf
+++ b/.config/hypr/settings/keywords.conf
@@ -5,5 +5,5 @@
 $terminal = kitty
 $fileManager = yazi 
 $menu = rofi -show drun
-$bar = waybar-launch 
-$wallpapers = swww-launch
+$bar = ~/.local/bin/waybar-launch.sh 
+$wallpapers = ~/.local/bin/swww-launch.sh
