--- a/.config/hypr/settings/windowsAndWorkspaces.conf
+++ b/.config/hypr/settings/windowsAndWorkspaces.conf
@@ -3,5 +3,26 @@
 # See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
 # ------------------------------------------------------------
 
-windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
+# Заврещаем развертывание (максимизацию) для приложений
+windowrulev2 = suppressevent maximize, class:.*
+
+# Делаем Picture in picture от Google Chrome запининым на всех экранах
+windowrulev2 = float, title:^(Picture in picture)$
+windowrulev2 = pin, title:^(Picture in picture)$
+windowrulev2 = noborder, title:^(Picture in picture)$
+windowrulev2 = keepaspectratio, title:^(Picture in picture)$
+windowrulev2 = fakefullscreen, title:^(Picture in picture)$
+windowrulev2 = size 320 180, title:^(Picture in picture)$
+windowrulev2 = move onscreen 100%-328 100%-188, title:^(Picture in picture)$
+windowrulev2 = animation popin 80%, title:^(Picture in picture)$
+
+windowrulev2 = float, class:^(ComTeam)$, title:^(ComTeam)$
+windowrulev2 = animation popin 80%, class:^(ComTeam)$, title:^(ComTeam)$
+windowrulev2 = pin, class:^(ComTeam)$, title:^(ComTeam)$
+windowrulev2 = noborder, class:^(ComTeam)$, title:^(ComTeam)$
+windowrulev2 = keepaspectratio, class:^(ComTeam)$, title:^(ComTeam)$
+windowrulev2 = fakefullscreen, class:^(ComTeam)$, title:^(ComTeam)$
+windowrulev2 = size 320 180, class:^(ComTeam)$, title:^(ComTeam)$
+windowrulev2 = move onscreen 100%-328 56, class:^(ComTeam)$, title:^(ComTeam)$
+windowrulev2 = animation popin 80%, class:^(ComTeam)$, title:^(ComTeam)$
 
