--- a/.config/hypr/settings/env.conf
+++ b/.config/hypr/settings/env.conf
@@ -9,3 +9,6 @@ env = XDG_SESSION_TYPE,wayland
 env = GBM_BACKEND,nvidia-drm
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 
+# Курсор
+env = HYPRCURSOR_THEME,catppuccin-mocha-dark
+env = HYPRCURSOR_SIZE,24
