--- a/.config/waybar/modules/workspaces.jsonc
+++ b/.config/waybar/modules/workspaces.jsonc
@@ -1,10 +1,11 @@
 {
   "hyprland/workspaces": {
     "active-only": false,
-		"show-special": true,
+    "show-special": true,
     "format": "{icon}",
-		"format-icons": {
-			"urgent": "!",
-		}
+    "format-icons": {
+      "active": "",
+      "urgent": "!",
+    },
   },
 }
